# rl-course-assignments

./: .gitignore  README.md  install.sh  pyproject.toml
01_gymnasium_handson/: README.md
01_gymnasium_handson/assignment/: 01_gymnasium_assignment.ipynb
02_dynamic_programming/: README.md
02_dynamic_programming/assignment/: 02_dynamic_programming_assignment.ipynb
03_model_free/: README.md
03_model_free/assignment/: 03_model_free_assignment.ipynb
04_function_approximation/: README.md
04_function_approximation/assignment/: 04_function_approximation_assignment.ipynb
05_model_based/: README.md
05_model_based/assignment/: 05_model_based_assignment.ipynb
06_actor_critic/: README.md
06_actor_critic/assignment/: 06_actor_critic_assignment.ipynb
rl_helpers/: __init__.py  gridworld.py  plotting.py  utils.py
